--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <head runat="server">
 
-  <title>404</title>
+  <title>page not found</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta property="og:title" content="Sayfa Bulunamadı">
   <meta property="og:type" content="website">
