--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>About me</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Basic</h3>
+										<p>👴🏻 | I am in 9th grade and I'm 14.</p>
+										<p></p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
