--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Basic</h3>
-										<p>👴🏻 | I am in 9th grade and I'm 14.</p>
-										<p></p>
+										<p>👴🏻 | age: 14.</p>
+										<p>📌 | interests: programing, networking and cybersecurity
+										<p>🌎 | current projects: My discord server</p>
+										<p>🤪 | education and skills: I am a self tught developer who mainly fouces on the front end. I know Python but dont have that many projects and that is one of my goals</p>
+										<p>🥅 | goals: find a career in technolagy and </p>
+
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
