--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<section id="first" class="">
 								<header class="major">
 									<h2>About me</h2>
 								</header>
-								<h3>Basic</h3>
 										<p>👴🏻 | age: 14.</p>
 										<p>📌 | interests: programing, networking and cybersecurity
 										<p>🌎 | current projects: My discord server</p>
