--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="">
+							<section id="first" class="main">
 								<header class="major">
 									<h2>About me</h2>
 								</header>
