--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
+							<li><a href="#AboutMe" class="active">About Me</a></li>
 							<li><a href="#first">First Section</a></li>
 							<li><a href="#second">Second Section</a></li>
 							<li><a href="#cta">Get Started</a></li>
@@ -33,16 +33,18 @@
 					<div id="main">
 
 						<!-- Introduction -->
-							<section id="intro" class="main">
+							<section id="AboutMe" class="main">
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
 											<h2>Hello Im Isaac.</h2>
 										</header>
 										<p>Welcome to my portfolio website. You are a little early and im still building it out right now! In the mean time check out my links!</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
+										<p>👴🏻 | age: 14.</p>
+										<p>📌 | interests: programing, networking and cybersecurity
+										<p>🌎 | current projects: My discord server</p>
+										<p>🤪 | education and skills: I am a self tught developer who mainly fouces on the front end. I know Python but dont have that many projects and that is one of my goals</p>
+										<p>🥅 | goals: find a career in technolagy</p>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
