--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#AboutMe" class="active">About Me</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#1" class="active">About Me</a></li>
+							<li><a href="#2">First Section</a></li>
+							<li><a href="#3">Second Section</a></li>
+							<li><a href="#4">Get Started</a></li>
 						</ul>
 					</nav>
 
@@ -33,38 +33,39 @@
 					<div id="main">
 
 						<!-- Introduction -->
-							<section id="AboutMe" class="main">
+							<section id="1" class="main">
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
 											<h2>Hello Im Isaac.</h2>
 										</header>
 										<p>Welcome to my portfolio website. You are a little early and im still building it out right now! In the mean time check out my links!</p>
-										<p>👴🏻 | age: 14.</p>
-										<p>📌 | interests: programing, networking and cybersecurity
-										<p>🌎 | current projects: My discord server</p>
-										<p>🤪 | education and skills: I am a self tught developer who mainly fouces on the front end. I know Python but dont have that many projects and that is one of my goals</p>
-										<p>🥅 | goals: find a career in technolagy</p>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main">
-								<header class="major">
-									<h2>About me</h2>
-								</header>
-										<p>👴🏻 | age: 14.</p>
-										<p>📌 | interests: programing, networking and cybersecurity
-										<p>🌎 | current projects: My discord server</p>
-										<p>🤪 | education and skills: I am a self tught developer who mainly fouces on the front end. I know Python but dont have that many projects and that is one of my goals</p>
-										<p>🥅 | goals: find a career in technolagy</p>
-								</footer>
-							</section>
+						<section id="2" class="main">
+							<div class="spotlight">
+								<div class="content">
+									<header class="major">
+										<h2>Hello Im Isaac.</h2>
+									</header>
+									<p>Welcome to my portfolio website. You are a little early and im still building it out right now! In the mean time check out my links!</p>
+									<p>👴🏻 | age: 14.</p>
+									<p>📌 | interests: programing, networking and cybersecurity
+									<p>🌎 | current projects: My discord server</p>
+									<p>🤪 | education and skills: I am a self tught developer who mainly fouces on the front end. I know Python but dont have that many projects and that is one of my goals</p>
+									<p>🥅 | goals: find a career in technolagy</p>
+								</div>
+								<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+							</div>
+						</section>
+							
 
 						<!-- Second Section -->
-							<section id="second" class="main special">
+							<section id="3" class="main special">
 								<header class="major">
 									<h2>Ipsum consequat</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
@@ -101,7 +102,7 @@
 							</section>
 
 						<!-- Get Started -->
-							<section id="cta" class="main special">
+							<section id="4" class="main special">
 								<header class="major">
 									<h2>Congue imperdiet</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
