--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#1" class="active">About Me</a></li>
-							<li><a href="#2">First Section</a></li>
+							<li><a href="#1" class="active">Introduction</a></li>
+							<li><a href="#2">About Me</a></li>
 							<li><a href="#3">Second Section</a></li>
 							<li><a href="#4">Get Started</a></li>
 						</ul>
@@ -37,11 +37,11 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Hello Im Isaac.</h2>
+											<h2>Hello I'm Isaac.</h2>
 										</header>
 										<p>Welcome to my portfolio website. You are a little early and im still building it out right now! In the mean time check out my links!</p>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/doof.jpg" alt="" /></span>
 								</div>
 							</section>
 
@@ -50,16 +50,14 @@
 							<div class="spotlight">
 								<div class="content">
 									<header class="major">
-										<h2>Hello Im Isaac.</h2>
+										<h2>About Me</h2>
 									</header>
-									<p>Welcome to my portfolio website. You are a little early and im still building it out right now! In the mean time check out my links!</p>
 									<p>👴🏻 | age: 14.</p>
 									<p>📌 | interests: programing, networking and cybersecurity
 									<p>🌎 | current projects: My discord server</p>
-									<p>🤪 | education and skills: I am a self tught developer who mainly fouces on the front end. I know Python but dont have that many projects and that is one of my goals</p>
-									<p>🥅 | goals: find a career in technolagy</p>
+									<p>🤪 | education and skills: I am a self tught developer who mainly fouces on the front end. I know Python but dont have that many projects and that is one of my goals.</p>
+									<p>🥅 | goals: find a career in technolagy.</p>
 								</div>
-								<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 							</div>
 						</section>
 							
@@ -133,7 +131,7 @@
 								<dt>Phone</dt>
 								<dd>(000) 000-0000</dd>
 								<dt>Email</dt>
-								<dd><a href="#"></a></dd>
+								<dd>isaac@isaacj.dev<a href="isaac@isaacj.dev"></a></dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
