--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<li><a href="#1" class="active">Introduction</a></li>
 							<li><a href="#2">About Me</a></li>
 							<li><a href="#3">Projcts</a></li>
-							<li><a href="#4">e</a></li>
+							<li><a href="#4">Discord Servers</a></li>
 						</ul>
 					</nav>
 
@@ -91,10 +91,7 @@
 									<p>My discord serevrs.</p>
 								</header>
 
-								<a href="generic.html" class="button">Learn More</a>
-								<a href="generic.html" class="button">Learn More</a>
-								<a href="generic.html" class="button">Learn More</a>
-								<a href="generic.html" class="button">Learn More</a>
+								<a href="https://discord.gg/JK49BqeEs3" class="button primary">main mods server</a>
 								
 							</section>
 
