--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 						<section>
 							<h2>Contact</h2>
 							<dl class="alt">
-								<dt>Phone</dt>
-								<dd>(000) 000-0000</dd>
+								<dt>Discord</dt>
+								<dd>doof#6716</dd>
 								<dt>Email</dt>
 								<dd>isaac@isaacj.dev<a href="isaac@isaacj.dev"></a></dd>
 							</dl>
