added more info

--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
 						<!-- Get Started -->
 							<section id="5" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>info</h2>
+									<p>If you need to contact me about paid work or a job offer you can add me disocrd at doof#6716 or if that is for you shoot me an email isaac@isaacj.dev</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
