--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<li><a href="#2">About Me</a></li>
 							<li><a href="#3">Projcts</a></li>
 							<li><a href="#4">Discord Servers</a></li>
-							<li><a href="#5">Other</a></li>
+							<li><a href="#5">Info</a></li>
 						</ul>
 					</nav>
 
