--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<section id="5" class="main special">
 								<header class="major">
 									<h2>info</h2>
-									<p>If you need to contact me about paid work or a job offer you can add me disocrd at doof#6716 or if that is not for you shoot me an email.</p> <p>isaac@isaacj.dev<a href="isaac@isaacj.dev"></a></p>>
+									<p>If you need to contact me about paid work or a job offer you can add me disocrd at doof#6716 or if that is not for you shoot me an email. <a href="isaac@isaacj.dev">isaac@isaacj.dev</a></p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
