--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 										<header class="major">
 											<h2>Hello I'm Isaac.</h2>
 										</header>
-										<p>Welcome to my portfolio website. You are a little early and im still building it out right now! In the mean time check out what i have so far!</p>
+										<p>Welcome to my portfolio website. You are a little early and I'm still building it out right now! In the mean time check out what I have so far!</p>
 									</div>
 									<span class="image"><img src="images/doof.jpg" alt="" /></span>
 								</div>
