--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										</header>
 										<p>Welcome to my portfolio website. You are a little early and I'm still building it out right now! In the mean time check out what I have so far!</p>
 									</div>
-									<span class="image"><img src="images/doof.jpg" alt="" /></span>
+									<span class="image"><img src="images/doof.jpg" alt="doof" /></span>
 								</div>
 							</section>
 
