--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<p>📌 | interests: programing, networking and cybersecurity
 									<p>🌎 | current projects: My discord server</p>
 									<p>🤪 | education and skills: I am a self tught developer who mainly fouces on the front end. I know Python but dont have that many projects and that is one of my goals.</p>
-									<p>🥅 | goals: find a career in technolagy.</p>
+									<p>🥅 | goals: find a career in technolagy, make more js and py projects for <a herf="https://isaacj.dev" >isaacj.dev</a></p>
 								</div>  
 							</div>
 						</section>
