--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 									</header>
 									<p>👴🏻 | age: 15.</p>
 									<p>📌 | interests: programing, networking and cybersecurity
-									<p>🌎 | current projects: My discord server</p>
-									<p>🤪 | education and skills: I am a self tught developer who mainly fouces on the front end. I know Python but dont have that many projects and that is one of my goals.</p>
-									<p>🥅 | goals: find a career in technolagy, make more js and py projects for <a herf="https://isaacj.dev" >isaacj.dev</a></p>
+									<p>🌎 | current projects: 30 days of JS</p>
+									<p>🤪 | education and skills: I am a self tught full stack developer but I mostly work on the front end. I know Python, JS and am learning C#</p>
+									<p>🥅 | goals: find a career in technolagy, make more js, py and C# projects for <a herf="https://isaacj.dev" >isaacj.dev</a></p>
 								</div>  
 							</div>
 						</section>
