--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<p>👴🏻 | age: 15.</p>
 									<p>📌 | interests: programing, networking and cybersecurity
 									<p>🌎 | current projects: 30 days of JS</p>
-									<p>🤪 | education and skills: I am a self tught full stack developer but I mostly work on the front end. I know Python, JS and am learning C#</p>
+									<p>🤪 | education and skills: I am a self tught full stack developer but I mostly work on the front end. I know Python, JS and am going to start learning C# soon</p>
 									<p>🥅 | goals: find a career in technolagy, make more js, py and C# projects for <a herf="https://isaacj.dev" >isaacj.dev</a></p>
 								</div>  
 							</div>
