--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
 									<p>🤪 | education and skills: I am a self tught full stack developer but I mostly work on the front end. I know Python, JS and am going to start learning C# soon</p>
 									<p>🥅 | long term goals: find a career in technolagy</p>
 									<p>🥅 | short term goals: make more js, py and C# projects for <a herf="https://isaacj.dev" >isaacj.dev</a></p>
+									<P>💻 | specs:</P>
+									<P>CUP: Amd ryzen 5 3600</P>
+									<P>GPU: GIGABYTE Radeon RX 5500 XT</P>
+									<p>RAM: 32 GB</p>
+									
 								</div>  
 							</div>
 						</section>
