--- a/index.html
+++ b/index.html
@@ -121,11 +121,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>More Info</h2>
-							<p></p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
+							
 						</section>
 						<section>
 							<h2>Contact</h2>
@@ -136,11 +132,8 @@
 								<dd>isaac@isaacj.dev<a href="isaac@isaacj.dev"></a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://twitter.com/IsaacJ_dev" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+								<li><a href="https://github.com/stickman-dev" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
 						<p class="copyright">&copy; IsaacJ.dev</p>
