--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<p>🥅 | long term goals: find a career in technolagy</p>
 									<p>🥅 | short term goals: make more js, py and C# projects for <a herf="https://isaacj.dev" >isaacj.dev</a></p>
 									<P>💻 | specs:</P>
-									<P>CUP: Amd ryzen 5 3600</P>
+									<P>CUP:	3rd Gen Ryzen 7 3800x</P>
 									<P>GPU: GIGABYTE Radeon RX 5500 XT</P>
 									<p>RAM: 32 GB</p>
 									
