--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 									<p>🥅 | short term goals: make more js, py and C# projects for <a herf="https://isaacj.dev" >isaacj.dev</a></p>
 									<P>💻 | specs:</P>
 									<P>CUP: Amd ryzen 5 3600</P>
-									<P>GPU: GIGABYTE Radeon RX 5500 XT</P>
+									<P>GPU: GIGABYTE Radeon RX 5500 XT 8GB</P>
 									<p>RAM: 32 GB</p>
-									
+
 								</div>  
 							</div>
 						</section>
