--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 						<section id="2" class="main">
 							<div class="spotlight">
 								<div class="content">
-									<header class="major">
+									<header class="major">g
 										<h2>About Me</h2>
 									</header>
 									<p>👴🏻 | age: 15.</p>
-									<p>📌 | interests: programing, networking and cybersecurity
-									<p>🌎 | current projects: 30 days of JS</p>
+									<p>📌 | interests: programing, networking and cybersecurity<p>
+									<p>🌎 | current projects: harvards CS50x</p>
 									<p>🤪 | education and skills: I am a self tught full stack developer but I mostly work on the front end. I know Python, JS and am going to start learning C# soon</p>
 									<p>🥅 | long term goals: find a career in technolagy</p>
 									<p>🥅 | short term goals: make more js, py and C# projects for <a herf="https://isaacj.dev" >isaacj.dev</a></p>
