--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<p>📌 | interests: programing, networking and cybersecurity<p>
 									<p>🌎 | current projects:</p>
 									<p>			harvard CS50x course</p>
-									<p>🤪 | education and skills: I am a self tught full stack developer but I mostly work on the front end. I know Python, JS and am going to start learning C# soon</p>
+									<p>🤪 | education and skills: I am a self tught developer. I know Python, HTML, CSS, JS and am going to start learning C# soon</p>
 									<p>🥅 | long term goals: find a career in technolagy</p>
 									<p>🥅 | short term goals: make more js, py and C# projects for <a herf="https://isaacj.dev" >isaacj.dev</a></p>
 									<P>💻 | specs:</P>
