--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 									<p>👴🏻 | age: 15.</p>
 									<p>📌 | interests: programing, networking and cybersecurity<p>
 									<p>🌎 | current projects:</p>
-									<p>			harvard CS50x course</p>
+									<p>harvard CS50x course</p>
 									<p>🤪 | education and skills: I am a self tught developer. I know Python, HTML, CSS, JS and am going to start learning C# soon</p>
 									<p>🥅 | long term goals: find a career in technolagy</p>
-									<p>🥅 | short term goals: make more js, py and C# projects for <a herf="https://isaacj.dev" >isaacj.dev</a></p>
+									<p>🥅 | short term goals: finish harvard CS50x course</p>
 									<P>💻 | specs:</P>
 									<P>CUP:	3rd Gen Ryzen 7 3800x</P>
 									<P>GPU: GIGABYTE Radeon RX 5500 XT</P>
