--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<section id="2" class="main">
 							<div class="spotlight">
 								<div class="content">
-									<header class="major">g
+									<header class="major">
 										<h2>About Me</h2>
 									</header>
 									<p>👴🏻 | age: 15.</p>
