--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 									<p>Where you can see all my public projects</p>
 								</header>
 
-									<a margin="20px" href="https://github.com/stickman-dev/omegle-ip-graber" title="Omegle ip Graber"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=stickman-dev&repo=omegle-ip-graber&theme=dark"></a>
-									<a margin="20px" href="https://github.com/stickman-dev/exploit-hub" title="exploit-hub"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=stickman-dev&repo=exploit-hub&theme=dark"></a>
-									<a margin="20px" href="https://github.com/stickman-dev/isaacj.dev" title="isaacj.dev"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=stickman-dev&repo=isaacj.dev&theme=dark"></a>
-									<a margin="20px" href="https://github.com/stickman-dev/musicunzipped" title="musicunzipped"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=stickman-dev&repo=musicunzipped&theme=dark"></a>
-									<a margin="20px" href="https://github.com/stickman-dev/py-projects" title="py-projects"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=stickman-dev&repo=py-projects&theme=dark"></a>
-									<a margin="20px" href="https://github.com/stickman-dev/js-projects" title="js-projects"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=stickman-dev&repo=js-projects&theme=dark"></a>
+									<a margin="20px" href="https://github.com/doof-dev/omegle-ip-graber" title="Omegle ip Graber"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=doof-dev&repo=omegle-ip-graber&theme=dark"></a>
+									<a margin="20px" href="https://github.com/doof-dev/exploit-hub" title="exploit-hub"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=doof-dev&repo=exploit-hub&theme=dark"></a>
+									<a margin="20px" href="https://github.com/doof-dev/isaacj.dev" title="isaacj.dev"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=doof-dev&repo=isaacj.dev&theme=dark"></a>
+									<a margin="20px" href="https://github.com/doof-dev/musicunzipped" title="musicunzipped"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=doof-dev&repo=musicunzipped&theme=dark"></a>
+									<a margin="20px" href="https://github.com/doof-dev/py-projects" title="py-projects"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=doof-dev&repo=py-projects&theme=dark"></a>
+									<a margin="20px" href="https://github.com/doof-dev/js-projects" title="js-projects"><img width="45%" src="https://github-readme-stats.vercel.app/api/pin/?username=doof-dev&repo=js-projects&theme=dark"></a>
 									
 								<p class="content"></p>
 								<footer class="major">
