--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 						<section id="3" class="main special">
 							<header class="major">
-								<h2>Stats</h2>
+								<h2 align="left">Stats</h2>
 								<p>My GitHub Stats</p>
 							</header>
 
