--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<section id="3" class="main special">
 							<header class="major">
 								<h2 align="left">Stats</h2>
-								<p>My GitHub Stats</p>
+								<p align="left">My GitHub Stats</p>
 							</header>
 
 							<a href="https://github.com/anuraghazra/github-readme-stats" title="Go to Source"><img width="100%" height="200" src="https://github-readme-stats.vercel.app/api?username=doof-dev&show_icons=true&theme=dark"></a>
