--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<p align="left">My GitHub Stats</p>
 							</header>
 
-							<a href="https://github.com/anuraghazra/github-readme-stats" title="Go to Source"><img width="100%" height="200" src="https://github-readme-stats.vercel.app/api?username=doof-dev&show_icons=true&theme=dark"></a>
+							<a align="left" href="https://github.com/anuraghazra/github-readme-stats" title="Go to Source"><img width="100%" height="200" src="https://github-readme-stats.vercel.app/api?username=doof-dev&show_icons=true&theme=dark"></a>
 								
 							<p class="content"></p>
 							<footer class="major">
