--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<p>harvard CS50x course</p>
 									<p>🤪 | education and skills: I am a self tught developer. I know Python, HTML, CSS, JS and am going to start learning C# soon</p>
 									<p>🥅 | long term goals: find a career in technolagy</p>
-									<p>🥅 | short term goals: make more js, py and C# projects for <a herf="https://isaacj.dev" >isaacj.dev</a></p>
+									<p>🥅 | short term goals: finish CS50X</p>
 									<P>💻 | specs:</P>
 									<P>CUP:	3rd Gen Ryzen 7 3800x</P>
 									<P>GPU: GIGABYTE Radeon RX 5500 XT</P>
@@ -72,7 +72,6 @@
 						<section id="3" class="main special">
 							<header class="major">
 								<h2>Stats</h2>
-								<p>My GitHub Stats</p>
 							</header>
 
 							<a href="https://github.com/anuraghazra/github-readme-stats" title="Go to Source"><img width="100%" height="200" src="https://github-readme-stats.vercel.app/api?username=doof-dev&show_icons=true&theme=dark"></a>
@@ -82,7 +81,7 @@
 
 							</footer>
 						</section>
-						
+
 
 							<section id="4" class="main special">
 								<header class="major">
