--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<p>📌 | interests: programing, networking and cybersecurity<p>
 									<p>🌎 | current projects:</p>
 									<p>harvard CS50x course</p>
-									<p>🤪 | education and skills: I am a self tught developer. I know Python, HTML, CSS, JS and am going to start learning C# soon</p>
+									<p>🤪 | education and skills: I am a mostly self tught developer. I know Python, HTML, CSS, a little JS and am curently learning C and C#</p>
 									<p>🥅 | long term goals: find a career in technolagy</p>
 									<p>🥅 | short term goals: finish CS50X</p>
 									<P>💻 | specs:</P>
