--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			<div class="cntbody">
 				<div class="cntinfo">				
 					<ul>
-						<li>y2k themed site!</li>
+						<li>y2k themed site! (it is made to look old and shitty)</li>
 						<li>this sites theme was made on: 12/03/09!</li>
 						<li>I am isaac</li>
                         <li>You can call me doof! o:</li>
