--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 	
 		<div class="cntbox">
 			<div class="cnthead">
-				<div class="cnttitle">Float Images To The Left</div>
+				<div class="cnttitle">Heading</div>
 			</div>
 			<div class="cntbody">
 				<div class="cntinfo">
