--- a/index.html
+++ b/index.html
@@ -117,8 +117,6 @@
 					<ul>
 						<li>y2k themed site! (it is made to look old and shitty)</li>
 						<li>this sites theme was made on: 12/03/09!</li>
-						<li>I am isaac</li>
-                        <li>You can call me doof! o:</li>
 					</ul>			
 				</div>
 			</div>
@@ -135,7 +133,7 @@
 			<div class="cntbody">
 				<div class="cntinfo">
 					
-					<p>isaacj.dev is not done 💀</p>
+					<p>isaacj.dev is not done yet 💀</p>
 
 				</div>
 			</div>
@@ -147,7 +145,7 @@
 	
 		<div class="cntbox">
 			<div class="cnthead">
-				<div class="cnttitle">Heading</div>
+				<div class="cnttitle">About Me</div>
 			</div>
 			<div class="cntbody">
 				<div class="cntinfo">
